--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -30,7 +30,7 @@
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
-							<a href="/" class="navbar-brand">SomiBlog</a>
+							<a href="/" class="navbar-brand">Somi</a>
 						</div>
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-left">
