--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -1,6 +1,8 @@
 <div class="container">
 	<h1>Blog</h1>
 </div>
+<div>{{data.posts.results}}</div>
+
 <div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-md-9">
